# ellipsonic_assessment

./: README.md  elipsonic.postman_collection.json  pyproject.toml
core/: models.py  serializer.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py
employee_management_system/: settings.py  urls.py
